Update gradle-jextract plugin and Gradle wrapper